Adding Deployment environment variable

--- a/client-server-demo/service-client/src/main/resources/application.properties
+++ b/client-server-demo/service-client/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 %dev.quarkus.rest-client."org.acme.RestServiceProxy".url=http://localhost:9000/
-quarkus.rest-client."org.acme.RestServiceProxy".url=http://rest-service:8080/
+quarkus.rest-client."org.acme.RestServiceProxy".url={REST_SERVICE_ENDPOINT}
