--- a/open-tracing/customer/pom.xml
+++ b/open-tracing/customer/pom.xml
@@ -15,117 +15,151 @@
   <surefire-plugin.version>3.0.0-M7</surefire-plugin.version>
   </properties>
   <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>${quarkus.platform.group-id}</groupId>
-        <artifactId>${quarkus.platform.artifact-id}</artifactId>
-        <version>${quarkus.platform.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-    </dependencies>
+  <dependencies>
+  <dependency>
+  <groupId>${quarkus.platform.group-id}</groupId>
+  <artifactId>${quarkus.platform.artifact-id}</artifactId>
+  <version>${quarkus.platform.version}</version>
+  <type>pom</type>
+  <scope>import</scope>
+  </dependency>
+  </dependencies>
   </dependencyManagement>
   <dependencies>
-    <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-resteasy</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-junit5</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.rest-assured</groupId>
-      <artifactId>rest-assured</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-rest-client</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-smallrye-opentracing</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-smallrye-health</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-smallrye-metrics</artifactId>
-    </dependency>
+  <dependency>
+  <groupId>io.quarkus</groupId>
+  <artifactId>quarkus-smallrye-opentracing</artifactId>
+  </dependency>
+  <dependency>
+  <groupId>io.quarkus</groupId>
+  <artifactId>quarkus-resteasy-reactive-jackson</artifactId>
+  </dependency>
+  <dependency>
+  <groupId>io.quarkus</groupId>
+  <artifactId>quarkus-smallrye-health</artifactId>
+  </dependency>
+  <dependency>
+  <groupId>io.quarkus</groupId>
+  <artifactId>quarkus-smallrye-metrics</artifactId>
+  </dependency>
+  <dependency>
+  <groupId>io.quarkus</groupId>
+  <artifactId>quarkus-rest-client-reactive-jackson</artifactId>
+  </dependency>
+  <dependency>
+  <groupId>io.quarkus</groupId>
+  <artifactId>quarkus-arc</artifactId>
+  </dependency>
+  <dependency>
+  <groupId>io.quarkus</groupId>
+  <artifactId>quarkus-resteasy-reactive</artifactId>
+  </dependency>
+  <dependency>
+  <groupId>io.quarkus</groupId>
+  <artifactId>quarkus-junit5</artifactId>
+  <scope>test</scope>
+  </dependency>
+  <dependency>
+  <groupId>io.rest-assured</groupId>
+  <artifactId>rest-assured</artifactId>
+  <scope>test</scope>
+  </dependency>
   </dependencies>
+  <repositories>
+  <repository>
+  <releases>
+  <enabled>true</enabled>
+  </releases>
+  <snapshots>
+  <enabled>false</enabled>
+  </snapshots>
+  <id>redhat</id>
+  <url>https://maven.repository.redhat.com/ga</url>
+  </repository>
+  </repositories>
+  <pluginRepositories>
+  <pluginRepository>
+  <releases>
+  <enabled>true</enabled>
+  </releases>
+  <snapshots>
+  <enabled>false</enabled>
+  </snapshots>
+  <id>redhat</id>
+  <url>https://maven.repository.redhat.com/ga</url>
+  </pluginRepository>
+  </pluginRepositories>
   <build>
-    <plugins>
-      <plugin>
-        <groupId>${quarkus.platform.group-id}</groupId>
-        <artifactId>quarkus-maven-plugin</artifactId>
-        <version>${quarkus.platform.version}</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>build</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>${surefire-plugin.version}</version>
-        <configuration>
-          <systemProperties>
-            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
-          </systemProperties>
-        </configuration>
-      </plugin>
-    </plugins>
+  <plugins>
+  <plugin>
+  <groupId>${quarkus.platform.group-id}</groupId>
+  <artifactId>quarkus-maven-plugin</artifactId>
+  <version>${quarkus.platform.version}</version>
+  <extensions>true</extensions>
+  <executions>
+  <execution>
+  <goals>
+  <goal>build</goal>
+  <goal>generate-code</goal>
+  <goal>generate-code-tests</goal>
+  </goals>
+  </execution>
+  </executions>
+  </plugin>
+  <plugin>
+  <artifactId>maven-compiler-plugin</artifactId>
+  <version>${compiler-plugin.version}</version>
+  <configuration>
+  <compilerArgs>
+  <arg>-parameters</arg>
+  </compilerArgs>
+  </configuration>
+  </plugin>
+  <plugin>
+  <artifactId>maven-surefire-plugin</artifactId>
+  <version>${surefire-plugin.version}</version>
+  <configuration>
+  <systemPropertyVariables>
+  <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
+  <maven.home>${maven.home}</maven.home>
+  </systemPropertyVariables>
+  </configuration>
+  </plugin>
+  <plugin>
+  <artifactId>maven-failsafe-plugin</artifactId>
+  <version>${surefire-plugin.version}</version>
+  <executions>
+  <execution>
+  <goals>
+  <goal>integration-test</goal>
+  <goal>verify</goal>
+  </goals>
+  <configuration>
+  <systemPropertyVariables>
+  <native.image.path>
+  ${project.build.directory}/${project.build.finalName}-runner
+  </native.image.path>
+  <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
+  <maven.home>${maven.home}</maven.home>
+  </systemPropertyVariables>
+  </configuration>
+  </execution>
+  </executions>
+  </plugin>
+  </plugins>
   </build>
   <profiles>
-    <profile>
-      <id>native</id>
-      <activation>
-        <property>
-          <name>native</name>
-        </property>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-maven-plugin</artifactId>
-            <version>${quarkus.version}</version>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>native-image</goal>
-                </goals>
-                <configuration>
-                  <enableHttpUrlHandler>true</enableHttpUrlHandler>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <artifactId>maven-failsafe-plugin</artifactId>
-            <version>${surefire-plugin.version}</version>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>integration-test</goal>
-                  <goal>verify</goal>
-                </goals>
-                <configuration>
-                  <systemProperties>
-                    <native.image.path>${project.build.directory}/${project.build.finalName}-runner</native.image.path>
-                  </systemProperties>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
+  <profile>
+  <id>native</id>
+  <activation>
+  <property>
+  <name>native</name>
+  </property>
+  </activation>
+  <properties>
+  <skipITs>false</skipITs>
+  <quarkus.package.type>native</quarkus.package.type>
+  </properties>
+  </profile>
   </profiles>
-</project>
+  </project>
