--- a/service-mesh/preference/src/main/resources/application.properties
+++ b/service-mesh/preference/src/main/resources/application.properties
@@ -1,10 +1,16 @@
 org.eclipse.microprofile.rest.client.propagateHeaders=baggage-user-agent
+quarkus.application.name=preference
 
-%prod.org.acme.RecommendationService/mp-rest/url=http://recommendation:8080
-
+#Endpoints per Deployment Environment
+%dev.RecommendationService_Endpoint=http://localhost:10000
+%dev.OpenTelemetry_Endpoint=http://localhost:4317
 %dev.quarkus.http.port=9000
-%dev.org.acme.RecommendationService/mp-rest/url=http://localhost:10000
-%dev.quarkus.jaeger.service-name=preference
-%dev.quarkus.jaeger.sampler-type=const
-%dev.quarkus.jaeger.sampler-param=1
-%dev.quarkus.log.console.format=%d{HH:mm:ss} %-5p traceId=%X{traceId}, parentId=%X{parentId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n
+
+%prod.RecommendationService_Endpoint=http://recommendation:8080
+%prod.OpenTelemetry_Endpoint=http://jaeger-all-in-one-inmemory-collector:4317
+
+#General properties
+quarkus.opentelemetry.tracer.exporter.otlp.endpoint=${OpenTelemetry_Endpoint}
+quarkus.log.console.format=%d{HH:mm:ss} %-5p traceId=%X{traceId}, parentId=%X{parentId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n
+org.acme.RecommendationService/mp-rest/url=${RecommendationService_Endpoint}
+
