--- a/service-mesh/customer/src/main/resources/application.properties
+++ b/service-mesh/customer/src/main/resources/application.properties
@@ -1,8 +1,15 @@
-%prod.org.acme.PreferenceService/mp-rest/url=http://preference:8080
+org.eclipse.microprofile.rest.client.propagateHeaders=baggage-user-agent
+quarkus.application.name=customer
 
+#Endpoints per Deployment Environment
+%dev.PreferenceService_Endpoint=http://localhost:9000
+%dev.OpenTelemetry_Endpoint=http://localhost:4317
 %dev.quarkus.http.port=8000
-%dev.org.acme.PreferenceService/mp-rest/url=http://localhost:9000
-%dev.quarkus.jaeger.service-name=customer
-%dev.quarkus.jaeger.sampler-type=const
-%dev.quarkus.jaeger.sampler-param=1
-%dev.quarkus.log.console.format=%d{HH:mm:ss} %-5p traceId=%X{traceId}, parentId=%X{parentId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n
+
+%prod.PreferenceService_Endpoint=http://preference:8080
+%prod.OpenTelemetry_Endpoint=http://jaeger-all-in-one-inmemory-collector:4317
+
+#General properties
+quarkus.opentelemetry.tracer.exporter.otlp.endpoint=${OpenTelemetry_Endpoint}
+quarkus.log.console.format=%d{HH:mm:ss} %-5p traceId=%X{traceId}, parentId=%X{parentId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n
+org.acme.PreferenceService/mp-rest/url=${PreferenceService_Endpoint}
