--- a/service-mesh/recommendation/src/main/resources/application.properties
+++ b/service-mesh/recommendation/src/main/resources/application.properties
@@ -1,6 +1,11 @@
+quarkus.application.name=recommendation
+
+#Endpoints per Deployment Environment
+%dev.OpenTelemetry_Endpoint=http://localhost:4317
 %dev.quarkus.http.port=10000
 
-%dev.quarkus.jaeger.service-name=recommendation
-%dev.quarkus.jaeger.sampler-type=const
-%dev.quarkus.jaeger.sampler-param=1
-%dev.quarkus.log.console.format=%d{HH:mm:ss} %-5p traceId=%X{traceId}, parentId=%X{parentId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n
+%prod.OpenTelemetry_Endpoint=http://jaeger-all-in-one-inmemory-collector:4317
+
+#General properties
+quarkus.opentelemetry.tracer.exporter.otlp.endpoint=${OpenTelemetry_Endpoint}
+quarkus.log.console.format=%d{HH:mm:ss} %-5p traceId=%X{traceId}, parentId=%X{parentId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n
