Adding GitOps Demo directory

--- a/service-mesh/customer/src/main/resources/application.properties
+++ b/service-mesh/customer/src/main/resources/application.properties
@@ -7,7 +7,7 @@ quarkus.application.name=customer
 %dev.quarkus.http.port=8000
 
 %prod.PreferenceService_Endpoint=http://preference:8080
-%prod.OpenTelemetry_Endpoint=http://jaeger-all-in-one-inmemory-collector:4317
+%prod.OpenTelemetry_Endpoint=http://jaeger-collector.istio-system:4317
 
 #General properties
 quarkus.opentelemetry.tracer.exporter.otlp.endpoint=${OpenTelemetry_Endpoint}
