--- a/service-mesh/preference/src/main/resources/application.properties
+++ b/service-mesh/preference/src/main/resources/application.properties
@@ -7,7 +7,7 @@ quarkus.application.name=preference
 %dev.quarkus.http.port=9000
 
 %prod.RecommendationService_Endpoint=http://recommendation:8080
-%prod.OpenTelemetry_Endpoint=http://jaeger-all-in-one-inmemory-collector:4317
+%prod.OpenTelemetry_Endpoint=http://jaeger-collector.istio-system:4317
 
 #General properties
 quarkus.opentelemetry.tracer.exporter.otlp.endpoint=${OpenTelemetry_Endpoint}
