--- a/service-mesh/recommendation/src/main/resources/application.properties
+++ b/service-mesh/recommendation/src/main/resources/application.properties
@@ -4,7 +4,7 @@ quarkus.application.name=recommendation
 %dev.OpenTelemetry_Endpoint=http://localhost:4317
 %dev.quarkus.http.port=10000
 
-%prod.OpenTelemetry_Endpoint=http://jaeger-all-in-one-inmemory-collector:4317
+%prod.OpenTelemetry_Endpoint=http://jaeger-collector.istio-system:4317
 
 #General properties
 quarkus.opentelemetry.tracer.exporter.otlp.endpoint=${OpenTelemetry_Endpoint}
