--- a/quarkus-gitops-demo/src/main/resources/application.properties
+++ b/quarkus-gitops-demo/src/main/resources/application.properties
@@ -1,15 +1,20 @@
-quarkus.openshift.route.expose=true
-quarkus.container-image.build=true
- 
-quarkus.container-image.tag=1.0
-quarkus.container-image.builder=docker
+# Specs for the container registry
 quarkus.container-image.registry=quay.io
 quarkus.container-image.group=skraft
 quarkus.container-image.name=quarkus-gitop-demo
+quarkus.container-image.tag=3.0
 
-quarkus.container-image.push=true
+# Specs for the K8s/OpenShift Manifests
 quarkus.openshift.route.expose=true
 quarkus.openshift.namespace=skraft-dev
+
+# Specs how to build & push the image
+quarkus.container-image.build=true
+quarkus.container-image.push=true
+quarkus.container-image.builder=docker
+
+
+
 
  
 quarkus.openshift.deployment-kind=Deployment
