--- a/quarkus-gitops-demo/src/main/resources/application.properties
+++ b/quarkus-gitops-demo/src/main/resources/application.properties
@@ -6,7 +6,7 @@ quarkus.container-image.tag=3.0
 
 # Specs for the K8s/OpenShift Manifests
 quarkus.openshift.route.expose=true
-quarkus.openshift.namespace=skraft-dev
+#quarkus.openshift.namespace=skraft-dev
 
 # Specs how to build & push the image
 quarkus.container-image.build=true
