--- a/client-server-demo/rest-service/src/main/resources/application.properties
+++ b/client-server-demo/rest-service/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 %dev.quarkus.http.port=9000
-quarkus.oidc.client-id=greeting-resource
-quarkus.oidc.credentials.secret=a199389e-f2d9-4cc8-884f-2106e97968e3
-quarkus.oidc.tls.verification=none
-quarkus.oidc.auth-server-url=https://sso-skraft-dev.apps.rhoam-ds-prod.xe9u.p1.openshiftapps.com/auth/realms/api-management
+#quarkus.oidc.client-id=rest-service
+#quarkus.oidc.credentials.secret=KvVNOCg5YDqDCctZ4afHFCgLIDKMBNgu
+#quarkus.oidc.tls.verification=none
