--- a/quarkus-gitops-demo/src/main/resources/application.properties
+++ b/quarkus-gitops-demo/src/main/resources/application.properties
@@ -2,7 +2,9 @@
 quarkus.container-image.registry=quay.io
 quarkus.container-image.group=skraft
 quarkus.container-image.name=quarkus-gitop-demo
-quarkus.container-image.tag=3.0
+quarkus.container-image.tag=4.0
+quarkus.openshift.add-version-to-label-selectors=false
+
 
 # Specs for the K8s/OpenShift Manifests
 quarkus.openshift.route.expose=true
