Adding Query param demo

--- a/RBAC-JWT-Demo/quarkus-keycloak-oidc-client-demo/client/src/main/resources/application.properties
+++ b/RBAC-JWT-Demo/quarkus-keycloak-oidc-client-demo/client/src/main/resources/application.properties
@@ -8,7 +8,11 @@ quarkus.keycloak.devservices.port=5000
 quarkus.oidc-client.auth-server-url=${quarkus.oidc.auth-server-url}
 quarkus.oidc-client.client-id=${quarkus.oidc.client-id}
 quarkus.oidc-client.credentials.secret=${quarkus.oidc.credentials.secret}
-quarkus.oidc-client.grant.type=client
+#quarkus.oidc-client.grant.type=client
+
+quarkus.oidc-client.grant.type=password
+quarkus.oidc-client.grant-options.password.username=alice
+quarkus.oidc-client.grant-options.password.password=alice
 
 quarkus.test.native-image-profile=test
 
