Adding OpenShift 3Scale & Keycloak demo

--- a/RBAC-JWT-Demo/quarkus-openshift-demo/client/src/main/resources/application.properties
+++ b/RBAC-JWT-Demo/quarkus-openshift-demo/client/src/main/resources/application.properties
@@ -1,23 +1,18 @@
 # Configuration file
-%prod.quarkus.oidc.auth-server-url=http://keycloak:8080/realms/quarkus/
+quarkus.oidc.auth-server-url=http://keycloak:8080/realms/quarkus/
+org.acme.security.openid.connect.client.RestClientWithOidcClientFilter/mp-rest/url=http://server:8080
 
 # OIDC Client for Token Creation & Propagation
 quarkus.oidc.client-id=backend-service
 quarkus.oidc.credentials.secret=secret
-quarkus.keycloak.devservices.realm-path=quarkus-realm.json
-quarkus.keycloak.devservices.port=5000
 
 quarkus.oidc-client.auth-server-url=${quarkus.oidc.auth-server-url}
 quarkus.oidc-client.client-id=${quarkus.oidc.client-id}
 quarkus.oidc-client.credentials.secret=${quarkus.oidc.credentials.secret}
 quarkus.oidc-client.grant.type=client
 
-%dev.port=9000
-%dev.org.acme.security.openid.connect.client.RestClientWithOidcClientFilter/mp-rest/url=http://localhost:${port}/protected
-org.acme.security.openid.connect.client.RestClientWithOidcClientFilter/mp-rest/url=http://server
-
 #OpenShift
-quarkus.kubernetes.deploy=true
+#quarkus.kubernetes.deploy=true
 quarkus.container-image.group=skraft-dev
 quarkus.openshift.route.expose=true
 quarkus.openshift.name=client
