--- a/RBAC-JWT-Demo/quarkus-openshift-demo/server/src/main/resources/application.properties
+++ b/RBAC-JWT-Demo/quarkus-openshift-demo/server/src/main/resources/application.properties
@@ -5,7 +5,7 @@ quarkus.oidc.client-id=backend-service
 quarkus.oidc.credentials.secret=secret
 
 #OpenShift
-quarkus.kubernetes.deploy=true
+#quarkus.kubernetes.deploy=true
 quarkus.container-image.group=skraft-dev
 quarkus.openshift.route.expose=true
 quarkus.openshift.name=server
