Adding camel-k demo

--- a/RBAC-JWT-Demo/quarkus-keycloak-webapp-demo/client/src/main/resources/application.properties
+++ b/RBAC-JWT-Demo/quarkus-keycloak-webapp-demo/client/src/main/resources/application.properties
@@ -15,3 +15,5 @@ quarkus.oidc.credentials.secret=LMipRdk1yTFgr59r46vBMSH2MUs8PU3t
 quarkus.keycloak.devservices.realm-path=realm-export-keycloak-demo.json
 quarkus.keycloak.devservices.port=5000
 
+quarkus.keycloak.devservices.image-name=quay.io/keycloak/keycloak:20.0.3
+
