Modfiying Service Mesh demo

--- a/RBAC-JWT-Demo/quarkus-openshift-service-mesh/client/src/main/resources/application.properties
+++ b/RBAC-JWT-Demo/quarkus-openshift-service-mesh/client/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #OpenShift
 quarkus.kubernetes.deploy=true
-quarkus.container-image.group=rbac-service-mesh
+quarkus.container-image.group=rbac-demo
 quarkus.openshift.route.expose=true
 quarkus.openshift.name=client
 quarkus.openshift.deployment-kind=deployment
