--- a/RBAC-JWT-Demo/quarkus-openshift-service-mesh/server/src/main/resources/application.properties
+++ b/RBAC-JWT-Demo/quarkus-openshift-service-mesh/server/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #OpenShift
 quarkus.kubernetes.deploy=true
-quarkus.container-image.group=rbac-service-mesh
+quarkus.container-image.group=rbac-demo
 quarkus.openshift.name=server
 
 # labels for Service Mesh
