Finalizing camelk Demo

--- a/camelk/Tokens.properties
+++ b/camelk/Tokens.properties
@@ -1,3 +1,16 @@
+Gitter:
+Token: 839a78e1f373e33f8263a32c0099a9929201bc9a
+Room id: 6352db206da03739849e2a15
+Room 10
+
+GITTER_TOKEN=839a78e1f373e33f8263a32c0099a9929201bc9a \
+&& \
+curl -v https://api.gitter.im/v1/rooms \
+-H "Accept: application/json" \
+-H "Authorization: Bearer "$GITTER_TOKEN
+
+
+
 Kafka SA:
 { 
 	"clientID":"48dea32f-0fc8-4f3a-bfbe-c90b7235bcf1", 
@@ -16,5 +29,5 @@ Kafka
 
 
 Slack:
-oAuth Token: xoxb-4037791187831-4761487412130-JADx9ASSSD67RsjAn2i16OtA
+oAuth Token: xoxb-4037791187831-4761487412130-Y5KF8VLMrAIEC2SudFS3hkCr
 
