Changing RBAC demo

--- a/RBAC-JWT-Demo/4c-keycloak-central-authorization-doesnt-work-yet/client/src/main/resources/application.properties
+++ b/RBAC-JWT-Demo/4c-keycloak-central-authorization-doesnt-work-yet/client/src/main/resources/application.properties
@@ -14,8 +14,6 @@ quarkus.oidc-client.grant.type=password
 quarkus.oidc-client.grant-options.password.username=alice
 quarkus.oidc-client.grant-options.password.password=alice
 
-quarkus.test.native-image-profile=test
-
 %dev.port=9000
-org.acme.security.openid.connect.client.RestClientWithOidcClientFilter/mp-rest/url=http://localhost:${port}/protected
-org.acme.security.openid.connect.client.RestClientWithTokenPropagationFilter/mp-rest/url=http://localhost:${port}/protected
+org.acme.security.openid.connect.client.ServerInterface/mp-rest/url=http://localhost:${port}
+org.acme.security.openid.connect.client.ServerInterface/mp-rest/url=http://localhost:${port}
