--- a/RBAC-JWT-Demo/4c-keycloak-central-authorization-doesnt-work-yet/server/src/main/resources/application.properties
+++ b/RBAC-JWT-Demo/4c-keycloak-central-authorization-doesnt-work-yet/server/src/main/resources/application.properties
@@ -2,10 +2,10 @@
 %prod.quarkus.oidc.auth-server-url=http://localhost:8180/realms/quarkus
 %dev.quarkus.oidc.auth-server-url=http://localhost:5000/realms/quarkus
 
-quarkus.oidc.client-id=backend-service
-quarkus.oidc.credentials.secret=secret
+#quarkus.oidc.client-id=backend-service
+#quarkus.oidc.credentials.secret=secret
 
-quarkus.keycloak.policy-enforcer.enable=true
+#quarkus.keycloak.policy-enforcer.enable=true
 
 
 
