Adding centralized authorization demo

--- a/RBAC-JWT-Demo/4c-keycloak-central-authorization/server/src/main/resources/application.properties
+++ b/RBAC-JWT-Demo/4c-keycloak-central-authorization/server/src/main/resources/application.properties
@@ -8,3 +8,6 @@ quarkus.oidc.tls.verification=none
 
 %dev.quarkus.http.port=9000
 quarkus.http.access-log.enabled=true
+
+quarkus.keycloak.policy-enforcer.enable=true
+quarkus.keycloak.policy-enforcer.lazy-load-paths=true
