--- a/RBAC-JWT-Demo/4c-keycloak-central-authorization/server/src/main/resources/application.properties
+++ b/RBAC-JWT-Demo/4c-keycloak-central-authorization/server/src/main/resources/application.properties
@@ -3,11 +3,11 @@
 
 quarkus.oidc.client-id=backend-service
 quarkus.oidc.credentials.secret=backend-secret
-quarkus.oidc.token.audience=backend-service
+#quarkus.oidc.token.audience=backend-service
 quarkus.oidc.tls.verification=none
 
 %dev.quarkus.http.port=9000
 quarkus.http.access-log.enabled=true
 
 quarkus.keycloak.policy-enforcer.enable=true
-quarkus.keycloak.policy-enforcer.lazy-load-paths=true
+quarkus.keycloak.policy-enforcer.lazy-load-paths=false
