--- a/deployment/bouvier/selma-deployment.yaml
+++ b/deployment/bouvier/selma-deployment.yaml
@@ -2,18 +2,18 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: patty
-    app.kubernetes.io/component: patty
-    app.kubernetes.io/instance: patty
-    app.kubernetes.io/name: patty
-    app.kubernetes.io/part-of: patty
+    app: selma
+    app.kubernetes.io/component: selma
+    app.kubernetes.io/instance: selma
+    app.kubernetes.io/name: selma
+    app.kubernetes.io/part-of: selma
     app.openshift.io/runtime: redhat
-  name: patty
+  name: selma
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: patty
+      app: selma
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -23,11 +23,11 @@ spec:
     metadata:
       creationTimestamp: null
       labels:
-        app: patty
-        deployment: patty
+        app: selma
+        deployment: selma
     spec:
       containers:
-      - image: quay.io/openshift-examples/simple-http-server:master
+      - image: quay.io/openshift-examples/simple-http-server:micro
         imagePullPolicy: IfNotPresent
         name: http-server
         ports:
