--- a/network-policy-demo/end_demo/bouvier/allow-same-namespace-bouvier.yaml
+++ b/network-policy-demo/end_demo/bouvier/allow-same-namespace-bouvier.yaml
@@ -1,9 +1,12 @@
 kind: NetworkPolicy
 apiVersion: networking.k8s.io/v1
 metadata:
-  name: default-deny
-  namespace: simpson
+  name: allow-same-namespace
+
 spec:
   podSelector: {}
+  ingress:
+  - from:
+    - podSelector: {}
   policyTypes:
   - Ingress
