--- a/network-policy-demo/end_demo/simpson/allow-from-openshift-ingress-simpson.yaml
+++ b/network-policy-demo/end_demo/simpson/allow-from-openshift-ingress-simpson.yaml
@@ -1,14 +1,14 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: allow-from-burns
-  namespace: simpson
+  name: allow-from-openshift-ingress
+  namespace: simpson-prod
 spec:
-  podSelector: {}
   ingress:
   - from:
     - namespaceSelector:
         matchLabels:
-          kubernetes.io/metadata.name: burns
+          network.openshift.io/policy-group: ingress
+  podSelector: {}
   policyTypes:
   - Ingress
