--- a/network-policy-demo/end_demo/simpson/default-deny-simpson.yaml
+++ b/network-policy-demo/end_demo/simpson/default-deny-simpson.yaml
@@ -1,12 +1,9 @@
 kind: NetworkPolicy
 apiVersion: networking.k8s.io/v1
 metadata:
-  name: allow-same-namespace
-  namespace: simpson
+  name: default-deny
+  namespace: simpson-prod
 spec:
   podSelector: {}
-  ingress:
-  - from:
-    - podSelector: {}
   policyTypes:
   - Ingress
