--- a/network-policy-demo/end_demo/simpson/namespace.yaml
+++ b/network-policy-demo/end_demo/simpson/namespace.yaml
@@ -4,5 +4,5 @@ metadata:
   annotations:
     openshift.io/description: "Home of Marge & Homer Simpson"
     openshift.io/display-name: "Simpson"
-  name: simpson
+  name: simpson-prod
 spec: {}
