--- a/RBAC-JWT-Demo/2a-BasicAuthentication-UserCredentialsInPropertiesFile/client/src/main/resources/application.properties
+++ b/RBAC-JWT-Demo/2a-BasicAuthentication-UserCredentialsInPropertiesFile/client/src/main/resources/application.properties
@@ -22,5 +22,5 @@ quarkus.security.users.embedded.roles.alice=admin
 quarkus.security.users.embedded.roles.bob=user
 ############## Option II *********************************
 
-org.eclipse.microprofile.rest.client.propagateHeaders=Authorization,Proxy-Authorization
+#org.eclipse.microprofile.rest.client.propagateHeaders=Authorization,Proxy-Authorization
 org.acme.client.ServerInterface/mp-rest/url=http://localhost:9000
