--- a/RBAC-JWT-Demo/4c-keycloak-decentralized-AuthorizationCode/client/src/main/resources/application.properties
+++ b/RBAC-JWT-Demo/4c-keycloak-decentralized-AuthorizationCode/client/src/main/resources/application.properties
@@ -4,11 +4,11 @@ quarkus.oidc.application-type=web-app
 quarkus.http.auth.permission.authenticated.paths=/*
 quarkus.http.auth.permission.authenticated.policy=authenticated
 
-quarkus.oidc.client-id=quarkus-app
-quarkus.oidc.credentials.secret=LMipRdk1yTFgr59r46vBMSH2MUs8PU3t
+#quarkus.oidc.client-id=quarkus-app
+#quarkus.oidc.credentials.secret=LMipRdk1yTFgr59r46vBMSH2MUs8PU3t
 
-quarkus.keycloak.devservices.realm-path=realm-export-keycloak-demo.json
+#quarkus.keycloak.devservices.realm-path=realm-export-keycloak-demo.json
 quarkus.keycloak.devservices.port=5000
 
-quarkus.keycloak.devservices.image-name=quay.io/keycloak/keycloak:20.0.3
+#quarkus.keycloak.devservices.image-name=quay.io/keycloak/keycloak:20.0.3
 
