--- a/RBAC-JWT-Demo/7-Keycloak-3Scale-on-Openshift/server/src/main/resources/application.properties
+++ b/RBAC-JWT-Demo/7-Keycloak-3Scale-on-Openshift/server/src/main/resources/application.properties
@@ -1,8 +1,16 @@
 %dev.quarkus.http.port=9000
 
+#3Scale Service discovery
+quarkus.openshift.annotations."discovery.3scale.net/scheme"=http
+quarkus.openshift.annotations."discovery.3scale.net/port"=8080
+quarkus.openshift.labels."discovery.3scale.net"=true
+quarkus.openshift.annotations."discovery.3scale.net/description-path"="/q/openapi"
+
+quarkus.http.auth.proactive=false
 #OpenShift
 quarkus.kubernetes.deploy=true
 quarkus.container-image.group=skraft-dev
 quarkus.openshift.route.expose=true
-quarkus.openshift.name=server
+quarkus.openshift.name=serviceb
 quarkus.openshift.deployment-kind=deployment
+quarkus.openshift.part-of=keycloak-3scale-demo
