--- a/RBAC-JWT-Demo/7-Keycloak-3Scale-on-Openshift/client/src/main/resources/application.properties
+++ b/RBAC-JWT-Demo/7-Keycloak-3Scale-on-Openshift/client/src/main/resources/application.properties
@@ -1,17 +1,19 @@
-quarkus.rest-client."org.acme.ServerInterface".url=https://api-for-server-skraft-apicast-staging.apps.rhoam-ds-prod.xe9u.p1.openshiftapps.com:443
-quarkus.oidc.application-type=web-app
+quarkus.rest-client."org.acme.ServerInterface".url=https://service-api-product-skraft-apicast-staging.apps.rhoam-ds-prod.xe9u.p1.openshiftapps.com:443
 
+quarkus.oidc.application-type=web-app
+%dev.quarkus.rest-client."org.acme.ServerInterface".url=http://localhost:9000
 
 quarkus.http.auth.permission.authenticated.paths=/*
 quarkus.http.auth.permission.authenticated.policy=authenticated
 
-quarkus.oidc.client-id=quarkus-app
-quarkus.oidc.credentials.secret=260e8ea3-7cfd-4878-b4df-53c9855e6c85
-quarkus.oidc.auth-server-url=https://sso-skraft-dev.apps.rhoam-ds-prod.xe9u.p1.openshiftapps.com/auth/realms/quarkus
+quarkus.oidc.client-id=cb348916
+quarkus.oidc.credentials.secret=3743948d7199eda54fbc441bd757553e
+quarkus.oidc.auth-server-url=https://sso-skraft-dev.apps.rhoam-ds-prod.xe9u.p1.openshiftapps.com/auth/realms/opensourcerer
 
 #OpenShift
 quarkus.kubernetes.deploy=true
 quarkus.container-image.group=skraft-dev
 quarkus.openshift.route.expose=true
-quarkus.openshift.name=client
+quarkus.openshift.name=servicea
 quarkus.openshift.deployment-kind=deployment
+quarkus.openshift.part-of=keycloak-3scale-demo
