adding Odo Demos

--- a/RBAC-JWT-Demo/7-Keycloak-3Scale-on-Openshift/client/src/main/resources/application.properties
+++ b/RBAC-JWT-Demo/7-Keycloak-3Scale-on-Openshift/client/src/main/resources/application.properties
@@ -8,11 +8,13 @@ quarkus.http.auth.permission.authenticated.policy=authenticated
 
 quarkus.oidc.client-id=cb348916
 quarkus.oidc.credentials.secret=3743948d7199eda54fbc441bd757553e
-quarkus.oidc.auth-server-url=https://sso-skraft-dev.apps.rhoam-ds-prod.xe9u.p1.openshiftapps.com/auth/realms/opensourcerer
+quarkus.oidc.tls.verification=none
+quarkus.oidc.auth-server-url=https://sso-skraft-stage.apps.rhoam-ds-prod.xe9u.p1.openshiftapps.com/auth/realms/opensourcerer
 
 #OpenShift
 quarkus.kubernetes.deploy=true
-quarkus.container-image.group=skraft-dev
+quarkus.container-image.group=skraft-stage
+quarkus.container-image.name=servicea
 quarkus.openshift.route.expose=true
 quarkus.openshift.name=servicea
 quarkus.openshift.deployment-kind=deployment
