--- a/RBAC-JWT-Demo/7-Keycloak-3Scale-on-Openshift/server/src/main/resources/application.properties
+++ b/RBAC-JWT-Demo/7-Keycloak-3Scale-on-Openshift/server/src/main/resources/application.properties
@@ -9,8 +9,9 @@ quarkus.openshift.annotations."discovery.3scale.net/description-path"="/q/openap
 quarkus.http.auth.proactive=false
 #OpenShift
 quarkus.kubernetes.deploy=true
-quarkus.container-image.group=skraft-dev
+quarkus.container-image.group=skraft-stage
 quarkus.openshift.route.expose=true
 quarkus.openshift.name=serviceb
+quarkus.container-image.name=serviceb
 quarkus.openshift.deployment-kind=deployment
 quarkus.openshift.part-of=keycloak-3scale-demo
